Fixed layout problems

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ body,
   box-sizing: border-box;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+
 @layer utilities {
   .assigned-cell {
     border-top: 2px solid #b3b4b5;    
